# arabic-bot

./: Cargo.toml
src/: main.rs  serializers.rs  tests.rs
src/ai/: create_practice.rs  example.txt  gpt_client.rs  mod.rs  serializers.rs
src/assets/: context.txt
src/handlers/: callback.rs  cmd.rs  mod.rs  start.rs
src/keyboard/: inline_keyboard.rs  keyboard.rs  mod.rs
src/utils/: auxiliary_fn.rs  mod.rs  user_data.rs
