[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8.0"
anyhow = "1.0"
async-trait = "0.1"


